--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,49 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:heltec_wifi_kit_32_v2]
-platform = espressif32
-board = heltec_wifi_kit_32_v2
+[platformio]
+; Set a default if you want, otherwise it builds ALL envs
+default_envs = heltec_wifi_kit_32_v2
+
+
+[env]
 framework = arduino
 monitor_speed = 115200
 upload_protocol = espota
+
+
+[env:heltec_wifi_kit_32_v2]
+platform = espressif32
+board = heltec_wifi_kit_32_v2
 upload_port = esp32-blink.local
+build_flags = 
+    -D DEVICE_HOSTNAME=\"esp32-blink\"
+    -D LED_PIN=25 
+upload_flags =
+    --port=3232
+    --auth=HellCat1
+
+[env:esp32-blink2]
+platform = espressif32
+board = heltec_wifi_kit_32_v2
+upload_port = esp32-blink2.local
+build_flags = 
+    -D DEVICE_HOSTNAME=\"esp32-blink2\"
+    -D LED_PIN=2 ; onboard LED pin
+upload_flags =
+    --port=3232
+    --auth=HellCat1
+
+
+[env:8266-Blink3]
+platform = espressif8266
+board = esp12e
+upload_port = 8266-blink3.local
+;upload_port =192.168.1.140
+build_flags = 
+    -D DEVICE_HOSTNAME=\"8266-blink3\"
+    -D LED_PIN=2 ; onboard LED pin
+    -D USE_8266
 upload_flags =
     --port=3232
     --auth=HellCat1
