updat ota and usb INI

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,56 +1,70 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
-[platformio]
-; Set a default if you want, otherwise it builds ALL envs
-default_envs = heltec_wifi_kit_32_v2
 
 
 [env]
 framework = arduino
 monitor_speed = 115200
+
+; ========= ESP32 #1 =========
+[env:heltec_wifi_kit_32_v2_usb]
+platform = espressif32
+board = heltec_wifi_kit_32_v2
+upload_port = /dev/ttyUSB0
+build_flags = 
+    -D DEVICE_HOSTNAME=esp32-blink
+    -D LED_PIN=25
+
+[env:heltec_wifi_kit_32_v2_ota]
+platform = espressif32
+board = heltec_wifi_kit_32_v2
 upload_protocol = espota
-
-
-[env:heltec_wifi_kit_32_v2]
-platform = espressif32
-board = heltec_wifi_kit_32_v2
 upload_port = esp32-blink.local
-build_flags = 
-    -D DEVICE_HOSTNAME=\"esp32-blink\"
-    -D LED_PIN=25 
 upload_flags =
     --port=3232
     --auth=HellCat1
+build_flags = 
+    -D DEVICE_HOSTNAME=esp32-blink
+    -D LED_PIN=25
 
-[env:esp32-blink2]
+; ========= ESP32 #2 =========
+[env:esp32-blink2_usb]
 platform = espressif32
 board = heltec_wifi_kit_32_v2
-upload_port = esp32-blink2.local
+upload_port = /dev/ttyUSB3
 build_flags = 
-    -D DEVICE_HOSTNAME=\"esp32-blink2\"
-    -D LED_PIN=2 ; onboard LED pin
+    -D DEVICE_HOSTNAME=esp32-blink2
+    -D LED_PIN=2
+
+[env:esp32-blink2_ota]
+platform = espressif32
+board = heltec_wifi_kit_32_v2
+upload_protocol = espota
+upload_port = esp32-blink2.local
 upload_flags =
     --port=3232
     --auth=HellCat1
+build_flags = 
+    -D DEVICE_HOSTNAME=esp32-blink2
+    -D LED_PIN=2
 
-
-[env:8266-Blink3]
+; ========= ESP8266 #3 =========
+[env:8266-blink3_usb]
 platform = espressif8266
 board = esp12e
-upload_port = 8266-blink3.local
-;upload_port =192.168.1.140
+upload_port = COM3
 build_flags = 
-    -D DEVICE_HOSTNAME=\"8266-blink3\"
-    -D LED_PIN=2 ; onboard LED pin
+    -D DEVICE_HOSTNAME=8266-blink3
+    -D LED_PIN=2
     -D USE_8266
+
+[env:8266-blink3_ota]
+platform = espressif8266
+board = esp12e
+upload_protocol = espota
+upload_port = 8266-blink3.local
 upload_flags =
     --port=3232
     --auth=HellCat1
+build_flags = 
+    -D DEVICE_HOSTNAME=8266-blink3
+    -D LED_PIN=2
+    -D USE_8266
