--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@ monitor_speed = 115200
 [env:heltec_wifi_kit_32_v2_usb]
 platform = espressif32
 board = heltec_wifi_kit_32_v2
-upload_port = /dev/ttyUSB0
+upload_port = COM3
 build_flags = 
     -D DEVICE_HOSTNAME=esp32-blink
     -D LED_PIN=25
@@ -29,7 +29,7 @@ build_flags =
 [env:esp32-blink2_usb]
 platform = espressif32
 board = heltec_wifi_kit_32_v2
-upload_port = /dev/ttyUSB3
+upload_port = COM3
 build_flags = 
     -D DEVICE_HOSTNAME=esp32-blink2
     -D LED_PIN=2
